# LinearC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/compiler/: parser.cpp  parser.h  symbolTable.cpp  symbolTable.h  translator.cpp  translator.h
src/peripheral/: argsParser.cpp  argsParser.h  fileParser.cpp  fileParser.h  stringParser.cpp  stringParser.h  sysArgs.cpp  sysArgs.h
src/utilities/: flags.cpp  flags.h  internalError.cpp  internalError.h  macros.h  strings.cpp  strings.h
test/: exchange.lc
